Bug 141824 - Navigator: Incorrect Width
Summary: Navigator: Incorrect Width
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-04-22 08:10 UTC by Xisco Faulí
Modified: 2024-05-26 13:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (23.00 KB, image/png)
2021-04-22 08:10 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-04-22 08:10:21 UTC
Created attachment 171349 [details]
screenshot

Steps to reproduce:
1. Remove the user profile
2. Launch Calc
3. Launch the Navigator

-> Some elements are not completely displayed. See screenshot

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 41145efffe9d5af358a52b9e114bb01b98b3d7c2
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-04-22 08:11:14 UTC
The issue is happening since

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3dfb8552eb84eaf831c4c3eb59c398afc87e9174

author	Caolán McNamara <caolanm@redhat.com>	2021-03-11 09:26:10 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2021-03-11 18:34:35 +0100
commit 3dfb8552eb84eaf831c4c3eb59c398afc87e9174 (patch)
tree 63c0b06f6d2e127291f156735673ba0678397645
parent 071df4770dfe421d96d3df748af751eaae6982c3 (diff)
check current floating state of DockingWindow

Bisected with: bibisect-linux64-7.2

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2021-04-22 11:45:59 UTC
floating mode used to be set before the navigator was created, now its after.
Comment 3 Commit Notification 2021-04-23 07:49:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe7fd5bdd2ae8b0829dd5947a7acd0b75970a51c

tdf#141824 init navigator to possibly floating in base ctor

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2021-04-28 16:26:56 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 41ff704cc49b7097b717882616011962ecd7198f
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!