tdf#141824 init navigator to possibly floating in base ctor

so its in the expected state when the child contents are created

Change-Id: Id5baaca8479334c8fa2ec60ce8b598b7a61a3d7b