sd/source/ui/inc/navigatr.hxx
@@ -86,7 +86,8 @@ private:
     bool m_bSetInitialFocusOnActivate;
 
 public:
-    SdNavigatorFloat(SfxBindings* _pBindings, SfxChildWindow* pMgr, vcl::Window* pParent);
+    SdNavigatorFloat(SfxBindings* _pBindings, SfxChildWindow* pMgr,
+                     vcl::Window* pParent, SfxChildWinInfo* pInfo);
     void InitTreeLB(const SdDrawDocument* pDoc);
     void FreshTree(const SdDrawDocument* pDoc);
     virtual void Activate() override;
